bäividys deedeedee :DDD

--- a/bullet hell gaem plox/bullet hell gaem plox/bullet hell gaem plox.vcxproj
+++ b/bullet hell gaem plox/bullet hell gaem plox/bullet hell gaem plox.vcxproj
@@ -89,7 +89,7 @@
   <ItemGroup>
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="GameObject.h" />
-    <ClInclude Include="menu\Menu.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
