räjähdysanimaatio, ei vielä poistu

--- a/bullet hell gaem plox/bullet hell gaem plox/bullet hell gaem plox.vcxproj
+++ b/bullet hell gaem plox/bullet hell gaem plox/bullet hell gaem plox.vcxproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Explosion.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
@@ -91,6 +92,7 @@
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Explosion.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Player.h" />
