--- a/bullet hell gaem plox/bullet hell gaem plox/bullet hell gaem plox.vcxproj
+++ b/bullet hell gaem plox/bullet hell gaem plox/bullet hell gaem plox.vcxproj
@@ -55,7 +55,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glew.lib;freetype.lib;jpeg.lib;opengl32.lib;sfml-window-s-d.lib;sfml-system-s-d.lib;winmm.lib;sfml-graphics-s-d.lib;sndfile.lib;openal32.lib;sfml-audio-s-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glew.lib;freetype.lib;jpeg.lib;opengl32.lib;sfml-window-s-d.lib;sfml-main-d.lib;sfml-system-s-d.lib;winmm.lib;sfml-graphics-s-d.lib;sndfile.lib;openal32.lib;sfml-audio-s-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
       <AdditionalLibraryDirectories>$(SolutionDir)..\SFML-2.2\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
@@ -75,9 +75,12 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>glew.lib;freetype.lib;jpeg.lib;opengl32.lib;winmm.lib;sfml-system-s.lib;sfml-window-s.lib;sfml-graphics-s.lib;sndfile.lib;openal32.lib;sfml-audio-s-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)...\SFML-2.2\lib\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;jpeg.lib;glew.lib;freetype.lib;sfml-graphics-s.lib;gdi32.lib;sfml-window-s.lib;openal32.lib;sndfile.lib;sfml-audio-s.lib;ws2_32.lib;sfml-network-s.lib;winmm.lib;sfml-system-s.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)..\SFML-2.2\lib\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
+    <ProjectReference>
+      <LinkLibraryDependencies>true</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Bullet.cpp" />
